adjust folder structure