@@ -2,20 +2,25 @@ package de.uol.swp.server.connection;
 
 import de.uol.swp.common.connectiom.ConnectionDTO;
 import de.uol.swp.common.connectiom.IConnectionDTO;
-import de.uol.swp.server.city.CityName;
+import de.uol.swp.server.city.data.CityName;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ConnectionMapper {
 
+    // Private constructor to hide the implicit public one
+    private ConnectionMapper() {
+        throw new UnsupportedOperationException("Utility class");
+    }
+
     public static IConnectionDTO toDTO(Connection connection) {
-        return new ConnectionDTO(connection.getId(),
+        return new ConnectionDTO(
+                connection.getId(),
                 connection.getCityNames()
                           .stream()
                           .map(CityName::getDisplayName)
-                          .collect(Collectors.toList()),
+                          .toList(),
                 connection.isTrainTrack(),
                 connection.isTrainTrackBuildable()
         );
@@ -24,11 +29,12 @@ public class ConnectionMapper {
     public static List<IConnectionDTO> toDTOList(List<Connection> connections) {
         List<IConnectionDTO> connectionDTOS = new ArrayList<>();
         for (Connection connection : connections) {
-            ConnectionDTO connectionDTO = new ConnectionDTO(connection.getId(),
+            ConnectionDTO connectionDTO = new ConnectionDTO(
+                    connection.getId(),
                     connection.getCityNames()
                               .stream()
                               .map(CityName::getDisplayName)
-                              .collect(Collectors.toList()),
+                              .toList(),
                     connection.isTrainTrack(),
                     connection.isTrainTrackBuildable()
             );
